# Openvino_cpp

./: .gitignore  CMakeLists.txt  ReadMe.md  detector.cpp  detector.h  dnn_infer.cpp  main.cpp  run.sh  store.cpp
